<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svMovieScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.moviedetails.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingBottom="40dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/ivPosterBackground"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:alpha="0.6"
            android:background="@color/bg_rating_neutral"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="210dp"
            android:layout_height="300dp"
            android:layout_margin="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/ivPosterBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPosterBackground"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Headline.MovieDetails.MovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/ivPosterBackground"
            tools:text="Подземелья и драконы: Честь среди воров" />

        <Space
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:id="@+id/layoutRatingVotesEngTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1">

            <TextView
                android:id="@+id/tvRatingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:padding="2dp"
                android:textAlignment="center"
                android:textColor="@color/bg_rating_positive"
                tools:text="8.1" />

            <TextView
                android:id="@+id/tvVotesHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:padding="2dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="31K" />

            <TextView
                android:id="@+id/tvEngTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:maxLines="1"
                android:padding="2dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Dungeons &amp; Dragons: Honor Among Thieves" />
        </LinearLayout>

        <Space
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/layoutRatingVotesEngTitle" />

        <TextView
            android:id="@+id/tvYearAndGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            tools:text="1979, ужасы, фантастика, семейный" />

        <Space
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tvYearAndGenres" />

        <TextView
            android:id="@+id/tvCountryDurationAgeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            tools:text="Канада, 1 ч 33 мин" />

        <Space
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCountryDurationAgeRating" />

        <LinearLayout
            android:id="@+id/iconBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider4">

            <ImageView
                android:id="@+id/iconBookmarkDrawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark" />

            <TextView
                android:id="@+id/iconBookmarkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_bookmark"
                android:textColor="@color/bottom_nav_unchecked" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="6"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/iconBookmark"
            tools:text="@string/description_text" />

        <ImageView
            android:id="@+id/ivDescriptionCutoffGradient"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="false"
            android:src="@drawable/gradient_description_cutoff"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvDescription"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sectionTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvHeadlineTrailer, layoutTrailer" />

        <TextView
            android:id="@+id/tvHeadlineTrailer"
            style="@style/Headline.MovieDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/headline_trailer"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTrailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvHeadlineTrailer">

            <ImageView
                android:id="@+id/ivTrailer"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/circle_play_icon"
                app:layout_constraintBottom_toBottomOf="@id/ivTrailer"
                app:layout_constraintEnd_toEndOf="@id/ivTrailer"
                app:layout_constraintStart_toStartOf="@id/ivTrailer"
                app:layout_constraintTop_toTopOf="@id/ivTrailer" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/baseline_play_arrow_24"
                app:layout_constraintBottom_toBottomOf="@id/ivTrailer"
                app:layout_constraintEnd_toEndOf="@id/ivTrailer"
                app:layout_constraintStart_toStartOf="@id/ivTrailer"
                app:layout_constraintTop_toTopOf="@id/ivTrailer"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sectionRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvHeadlineRating, layoutRating" />

        <TextView
            android:id="@+id/tvHeadlineRating"
            style="@style/Headline.MovieDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/headline_rating"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/layoutTrailer" />

        <LinearLayout
            android:id="@+id/layoutRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvHeadlineRating">

            <LinearLayout
                android:id="@+id/layoutRatingKp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:background="@color/bg_rating_section"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/tvRatingKp"
                    style="@style/Text.RatingSection.Rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="8.1" />

                <TextView
                    style="@style/Text.RatingSection.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raiting_kp" />

                <TextView
                    android:id="@+id/tvRatingKpVotesCount"
                    style="@style/Text.RatingSection.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="902 637 оценок" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRatingImdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/bg_rating_section"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/tvRatingImdb"
                    style="@style/Text.RatingSection.Rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="8.1" />

                <TextView
                    style="@style/Text.RatingSection.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_imdb" />

                <TextView
                    android:id="@+id/tvRatingImdbVotesCount"
                    style="@style/Text.RatingSection.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="902 637 оценок" />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sectionSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvHeadlineSimilarMovies, rvSimilarMovies" />

        <TextView
            android:id="@+id/tvHeadlineSimilarMovies"
            style="@style/Headline.MovieDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/headline_similar_movies"
            app:layout_constraintEnd_toEndOf="@id/guideLineRight"
            app:layout_constraintStart_toStartOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@id/layoutRating" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSimilarMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="14dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeadlineSimilarMovies"
            tools:itemCount="7"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_movie_similar"
            tools:orientation="horizontal"
            tools:scrollbars="horizontal" />

        <include
            android:id="@+id/layoutLoadingMovieDetails"
            layout="@layout/layout_loading_movie_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>